Change type to module

--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
     "node-fetch": "^3.2.10"
-  }
+  },
+  "type": "module",
+  "name": "update-advisors",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/drikusroor/update-advisors.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/drikusroor/update-advisors/issues"
+  },
+  "homepage": "https://github.com/drikusroor/update-advisors#readme",
+  "description": ""
 }
