--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,8 @@ jobs:
         git config --local user.email "info@example.com"
         git config --local user.name "GitHub Actions"
         git add .
-        git commit -m "Github Actions: Update advisors" -a
-        git push
-
+        # only commit if there are changes
+        if [ -n "$(git status --porcelain)" ]; then
+          git commit -m "Github Actions: Update advisors" -a
+          git push
+        fi
